form spacing fix

--- a/project/css/style.css
+++ b/project/css/style.css
@@ -261,6 +261,11 @@ textarea {
 	width: 400px;
 }
 
+.basicinfo {
+
+	margin-bottom: 7px; 
+}
+
 /* -------Form details area ending -------*/
 
 
